# Vaultwyr

./: Cargo.toml  README.MD  package-lock.json  package.json
src/: API.tsx  App.css  App.tsx  Settings.tsx  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/utils/dialog_lib/: Cargo.toml
src-tauri/utils/dialog_lib/src/: button_styles.rs  lib.rs  main.rs  popup_builders.rs  prebuilt_windows.rs  responses.rs
src-tauri/utils/dialog_lib/tests/: test_pop_ups.rs
src-tauri/utils/encryption_utils/: Cargo.toml
src-tauri/utils/encryption_utils/src/: lib.rs
src-tauri/utils/file_utils/: Cargo.toml  temp.fvaultwyr
src-tauri/utils/file_utils/src/: CryptoFiles.rs  application_settings.rs  crypto_files.rs  lib.rs
src-tauri/utils/file_utils/src/CryptoFiles/: CryptoFiles.rs  Parser.rs
src-tauri/utils/file_utils/src/crypto_files/: behaviour.rs  crypto_files.rs  file_traversal.rs  parser.rs
src-tauri/utils/file_utils/tests/: test_cryptofiles.rs
src/compontens/ModeSelect/: ModeSelect.css  ModeSelect.tsx
src/compontens/PasswordSubmit/: PasswordSubmit.tsx
src/compontens/PathSelect/: PathSelect.tsx
src/compontens/SettingsMenu/: SettingsMenu.tsx
src/compontens/SideBar/: SideBar.tsx
src/compontens/SliderWithInput/: SliderWithInput.module.css  SliderWithInput.tsx
src/compontens/Switch/: Switch.tsx
src/compontens/Toasts/: ToastButton.tsx  ToastGroup.tsx
src/libs/file_utils/src/: lib.rs
