[package]
name = "vaultwyr"
version = "0.1.0"
description = "Vaultwyr app for decrypting your folder"
authors = ["you"]
edition = "2021"

[workspace]
members = [
    "utils/encryption_utils",
    "utils/file_utils",
]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vaultwyr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

file_utils = {path = "utils/file_utils"}  
encryption_utils = {path = "utils/encryption_utils"}    
tauri-plugin-dialog = "2"
