[package]
name = "file_utils"
version = "0.1.0"
edition = "2021"


[dev-dependencies]
serial_test = "3.2.0"

[dependencies]
encryption_utils = {path = "../encryption_utils"}
dialog_lib =   {path = "../dialog_lib"}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10" 
alkahest = "0.3.0"
tempfile = "3"
directories = "6.0.0"
tauri = { version = "2", features = [] }